moved COPYING -> LICENSE and README -> README.md with additional content